Fix 2.9.0 injected runtime compatibility (#63)
Correct the 2.9.0 release blocker at the patched-server runtime boundary.

- keep build/patcher tooling on Java 21 while emitting injected server helpers as Java 8 classfiles
- restore complete Velocity runtime helper closure
- remove direct modern-only authlib/Netty links from the oldest-runtime Bungee path
- add deterministic injected bytecode/API-link guards
- make full stable qualification verify runtime helper closure and target-Java classfile compatibility

Exact PR head 3d54af508d28e6b62bd5859d675546f7bb57ec8e passed build/reproducibility, Minecraft compatibility, stable-release policy, documentation contract, and public-site readiness.